Fixed visibility transition issue in IE, where the goal assessment containers would "hang" over the other pages for a short interval before disappearing. Fixed update page function issue.

--- a/documentation-tool.css
+++ b/documentation-tool.css
@@ -38,6 +38,7 @@
 
 .h5p-documentation-tool .h5p-documentation-tool-page-container .h5p-documentation-tool-page * {
   visibility: hidden;
+  transition: visibility 0s;
 }
 
 .h5p-documentation-tool .h5p-documentation-tool-page-container .h5p-documentation-tool-page.current * {
